# system-prompt-retrieval-mcp

./: .gitignore  README.md  index.json  index_enriched.json  keywords.json  pyproject.toml  relevancy-picker.py  router.py  session.start.md  test_queries.json  worker.js  wrangler.jsonc
.github/workflows/: deploy.yml
communication/: collaboration.md  output-standards.md  persistent-problems.md  response-gate.md
operations/: files-artifacts.md  session-context.md
project-management/: claude-personal-notes.md  plans-tasks-decisions.md  session-start.md  session.start.md
src/: __init__.py  __main__.py  entry.py  evaluator.py  indexer.py  query_parser.py  retriever.py  server.py
tests/: test_queries.json
