[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "progressive-claude-system-prompt-mcp"
version = "0.1.0"
description = "MCP server for progressive system prompt loading via hybrid line-aware retrieval"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
progressive-prompt = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
