[project]
name = "progressive-claude-system-prompt-mcp"
version = "0.1.0"
description = "Progressive Claude system prompt MCP server — Cloudflare Python Worker"
requires-python = ">=3.12"

# Runtime dependencies
# All retrieval logic (BM25, TF-IDF, RRF) uses only Python stdlib.
# The only external dep is the MCP SDK itself.
dependencies = [
    "mcp[cli]>=1.6.0",
]

[tool.uv]
# pywrangler is the CLI for Python Workers — install as a dev tool
dev-dependencies = [
    "pywrangler>=0.1.0",
    "workers-runtime-sdk>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
